# libdbase

./: AUTHORS  BUGLIST  CMakeLists.txt  README.md  conanfile.txt
cli/: CMakeLists.txt  dbase.c  dbase.h
examples/: CMakeLists.txt  EXAMPLES  example1.c  example2.c  example3.c
src/: CMakeLists.txt  DigiBASE.cpp  DigiBASE.h  libdbase.c  libdbase.h  libdbasei.c  libdbasei.h  pylibdbase.cpp
